--- a/package.json
+++ b/package.json
@@ -5,8 +5,12 @@
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
+    "history": "5.0.0",
+    "lord-icon-element": "2.0.2",
+    "lottie-web": "5.7.8",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-router-dom": "6.0.0-beta.0",
     "react-scripts": "4.0.0"
   },
   "devDependencies": {
